# Routis

./: .env.example  CONTRIBUTING.md  README.md  docker-compose.yml  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  cla.yml
apps/api/: Dockerfile  export_schema.py  main.py  pyproject.toml
apps/web/: .gitignore  Dockerfile  eslint.config.mjs  openapi-ts.config.ts  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
docs/: ARCHITECTURE.md  CLA.md
docs/schema/: openapi.json
signatures/version1/: cla.json
